[package]
name = "overlay"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

description = "A way to create game overlays"
documentation = "https://docs.rs/overlay"
repository = "https://github.com/maroider/overlay"

readme = "README.md"
keywords = ["overlay"]
categories = ["gui"]

license = "MIT OR APACHE-2.0"

maintenance = { status = "actively-developed" }

[dependencies]
imgui = "0.2.1"
imgui-winit-support = { version = "0.2.1", default-features = false, features = ["winit-20"] }
raw-window-handle = "0.3.3"
smallvec = "1.1.0"
winit = "0.20.0-alpha5"
wio = "0.2.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = [
    "d3d11",
    "d3dcommon",
    "debugapi",
    "dxgi",
    "impl-default",
    "libloaderapi",
    "minwindef",
    "windef",
    "winerror",
    "winuser"
]

[dev-dependencies]

[build-dependencies]
cargo-emit = "0.1"
dunce = "1.0.0"
winapi = { version = "0.3.8", features = ["d3dcompiler", "winerror"] }
wio = "0.2.2"
