[package]
name = "overlay"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

description = "A way to create game overlays"
documentation = "https://docs.rs/overlay"
repository = "https://github.com/maroider/overlay"

readme = "README.md"
keywords = ["overlay"]
categories = ["gui"]

license = "MIT OR APACHE-2.0"

[features]
default = ["x11"]
x11 = ["xcb"]

[dependencies]
winit = "0.23.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["windef", "winuser"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
xcb = { version = "0.9.0", features = ["composite"], optional = true }

[dev-dependencies]
env_logger = "0.8.2"
imgui = "0.6.1"
imgui-wgpu = "0.12.0"
imgui-winit-support = "0.6.1"
pollster = "0.2.0"
wgpu = "0.6.0"
wgpu-subscriber = "0.1"
